--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -39,6 +39,7 @@ $header-logo-size:        32px !default;
 $head-zindex:             20 !default;
 $content-zindex:          30 !default;
 $sidebar-zindex:          40 !default;
+$sitename-zindex:         50 !default;
 
 $base-radius:             3px !default;
 $base-transition:         .2s all ease !default;
